# chess-rs

./: Cargo.toml  debug.json
.cargo/: config.toml
core/: Cargo.toml  MakeFile.toml  make.py
core/src/: bitboard.rs  consts.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: main.rs
testbench/: Cargo.toml
testbench/src/: fen.rs  main.rs  perft.rs
wizard/: Cargo.toml
wizard/src/: bin.rs  known.rs  lib.rs
