[package]
name = "core"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
bench = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"


[dependencies]
lazy_static = "1.4.0"
bitintr = "0.3.0"
arrayvec = "0.7.2"
rayon = "1.5.1"
nanorand = "0.6.1"
nanoserde = "0.1.27"
itoa = "0.4.8"
log = "0.4.14"
simplelog = "0.10.2"